--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Cafeteria</title>
 </head>
 <body>
-    
+    <h1>Welcome to My Cafeteria</h1>
+    <p>Please Check our <a href="menu.html">Menu</a></p>
 </body>
 </html>
